# qui

./: .gitignore  Cargo.toml  HOMEBREW.md  INSTALL_TEST_RESULTS.md  LICENSE  Makefile  README.md  RELEASE.md  USAGE.md  install.sh
.github/scripts/: homebrew_release.py
.github/workflows/: ci.yml  homebrew-release.yml  release.yml  test-install.yml  validate-workflows.yml
Formula/: qui.rb
src/: app.rs  events.rs  kube_client.rs  main.rs  ui.rs
