[package]
name = "qui"
version = "0.0.5"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
kube = { version = "0.97", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
futures = "0.3"
dirs = "5.0"
portable-pty = "0.8"
vt100 = "0.15"
